# AAU-Notes

./: overallNotes.md
3-Semester/: overallNotes.md
5-Semester/Project/ARGoStryout/loop_functions/communicator_loop_functions/: CMakeLists.txt  communicator_loop_functions.cpp  communicator_loop_functions.h
AD Algorithms and Datastructures/: Cheatsheep.md  Cheatsheet.md  INFO.md  lek01.md  lek02.md  lek02opg.md  lek03.md  lek03opg.md  lek04.md  lek04opg.md  lek04q - self-study.md  lek05 - sorting.md  lek06 - Heapsort + ADTs.md  lek06opg.md  lek08 - Hash tables and binary search trees.md  lek09 - dynamic programming.md  lek09q - self-study.md  lek10 - Elementary Graph Algorithms.md  lek11 - Strongly Connected Components and Minimum Spanning Trees.md  lek12 - Finding Shortest Paths.md  lek2OPG.md  lek3.md  lek4.md  lek5 - sorting.md  lek5opg.md  lek6 - Heapsort + ADTs.md  lek7 - datastructures.md  lek8 - Hash tables and binary search trees.md
DEB Design and evaluation of user interfaces/: lek02. - Understanding and data collection techniquesmd  lek03 - Envisionment.md  lek06 - Physical Design - Perception & Navigation.md  lek1.md  lek1opg.md  lek4 - Physical Design.md  lek7 -  Evaluation Usability and Usability Testing.md
SU Systems Development/: INFO.md  ProjectExamples.md  lek01 - Method.md  lek01opg.md  lek02 - System Choice.md  lek03 - patterns.md  lek03opg.md  lek04opg.md  lek06 - in practice.md  lek09 - Component Design and Model Component.md  lek1 - Method.md  lek1.md  lek10 - Function Component.md  lek12 - Connection of Components.md  lek2 - System Choice.md  (+7 more)
(+116 files in other folders)
